<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="metric">METRIC</string>
    <string name="body_weight_kg">Weight (kg)</string>
    <string name="height_cm">Height (cm)</string>
    <string name="bmi">BMI</string>
    <string name="calculate">Calculate</string>
    <string name="metric1">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="textmetric">METRIC</string>
    <string name="result">Result</string>
    <string name="imperialtext">IMPERIAL</string>
    <string name="title_activity_help_menu">Help</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>